[package]
name = "ghost"
version = "0.1.0"
authors = ["Baul <roidinev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.11"
#chrono = { version = "0.4", features = ["serde"] }

