[package]
name = "ghost"
version = "0.1.0"
authors = ["Baul <roidinev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
#jsonwebtoken = "7"
jsonwebtoken = { path = "../jsonwebtoken" }
serde = {version = "1.0", features = ["derive"] }
#chrono = "0.4.11"
#chrono = { version = "0.4", features = ["serde"] }

#frank_jwt = "3.1.2"
frank_jwt = { path = "../frank_jwt" }
serde_json = "1.0"
hex = "0.4.2"

chrono = { version = "0.4", features = ["serde"] }
http = "0.1.18"
reqwest = { version = "0.10", features = ["json", "blocking"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
serde_qs = "0.4"
serde_with = "1.3.1"
slog = "2.4"
slog-term = "2.4"
sloggers = "0.3"
url = "2.1"
percent-encoding = "1.0.1"
failure = "0.1.5"

dotenv = "0.15.0"
